--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="banner">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwRh4sxC32jae9XDBM50RDHcmhyC2wdr2yR_Q0bWrQc7_MoKkev3-LLsQ&s=10" alt="Banner" style="width:100%; height:100%; object-fit:cover;">
     </div>
-
+ <h2>There are 24 molecules</h2>
     <div class="search-container">
         <input type="text" id="mol-search" placeholder="SEARCH BOX" onkeydown="if(event.key==='Enter') searchMolecule()">
     </div>
@@ -266,6 +266,13 @@
     </div>
     <div id="tnt-box" class="canvas-3d"></div>
     </div>
+    <div class="molecule-entry">
+    <div class="molecule-title">CAFFEINE (C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>)</div>
+    <div class="knowledge-box">
+        A central nervous system stimulant of the methylxanthine class. It is the world's most widely consumed psychoactive substance, found naturally in coffee, tea, and cacao.
+    </div>
+    <div id="caffeine-box" class="canvas-3d"></div>
+    </div>
         <script>
     // --- DATA ---
     const molData = [
@@ -318,7 +325,20 @@
     {f:1,t:10}, {f:10,t:11}, {f:10,t:12}, // Nitro 1 bonds
     {f:3,t:13}, {f:13,t:14}, {f:13,t:15}, // Nitro 2 bonds
     {f:5,t:16}, {f:16,t:17}, {f:16,t:18}  // Nitro 3 bonds
-], i: false, z: 10}                         
+], i: false, z: 10},
+        {id: 'caffeine-box', a: [
+    {c:0x0000ff,s:0.45,x:-0.8,y:-0.5,z:0}, {c:0x333333,s:0.5,x:0,y:0.5,z:0}, {c:0x0000ff,s:0.45,x:0.8,y:-0.5,z:0}, {c:0x333333,s:0.5,x:0,y:-1.2,z:0}, // Central Ring
+    {c:0x333333,s:0.5,x:-1.1,y:0.8,z:0}, {c:0x333333,s:0.5,x:1.1,y:0.8,z:0}, // Ring Carbons
+    {c:0xff0000,s:0.5,x:-1.8,y:1.5,z:0}, {c:0xff0000,s:0.5,x:1.8,y:1.5,z:0}, // Oxygens
+    {c:0x0000ff,s:0.45,x:-1.5,y:-1.2,z:0}, {c:0x0000ff,s:0.45,x:1.5,y:-1.2,z:0}, // Outer Nitrogens
+    {c:0x333333,s:0.5,x:-2.5,y:-0.5,z:0}, {c:0x333333,s:0.5,x:2.5,y:-0.5,z:0}, // Methyl Groups
+    {c:0x333333,s:0.5,x:0,y:1.8,z:0}, {c:0xeeeeee,s:0.25,x:0,y:2.4,z:0.5}, {c:0xeeeeee,s:0.25,x:0.5,y:2.4,z:-0.5}, {c:0xeeeeee,s:0.25,x:-0.5,y:2.4,z:-0.5} // Top Methyl
+], b: [
+    {f:0,t:1},{f:1,t:2},{f:2,t:3},{f:3,t:0}, // Inner ring bonds
+    {f:1,t:4},{f:1,t:5},{f:4,t:6},{f:5,t:7}, // Oxygen bonds
+    {f:0,t:8},{f:2,t:9},{f:8,t:10},{f:9,t:11}, // Nitrogen/Methyl bonds
+    {f:1,t:12},{f:12,t:13},{f:12,t:14},{f:12,t:15} // Top branch
+], i: false, z: 12}
     ];
 
     let renderer, scene;
